consul.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
  namespace: microapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
      - name: consul
        image: consul:1.15
        args: ["agent", "-dev", "-client=0.0.0.0"]
        ports:
        - containerPort: 8500
---
apiVersion: v1
kind: Service
metadata:
  name: consul
  namespace: microapp
spec:
  selector:
    app: consul
  ports:
  - port: 8500
    targetPort: 8500
