orders.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
  namespace: microapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      containers:
      - name: orders-service
        image: juan1722/orders-service:latest
        ports:
        - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
  namespace: microapp
spec:
  selector:
    app: orders-service
  ports:
  - port: 3003
    targetPort: 5004
  type: ClusterIP
