products.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
  namespace: microapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products-service
  template:
    metadata:
      labels:
        app: products-service
    spec:
      containers:
      - name: products-service
        image: juan1722/products-service:latest
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: products-svc
  namespace: microapp
spec:
  selector:
    app: products-service
  ports:
  - port: 3002
    targetPort: 5003
  type: ClusterIP
